--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,19 +11,32 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 92vh;
+      }
+      button {
+        background-color: rgb(139, 19, 19);
+        color: white;
+        font-size: 1rem;
+        border-radius: 10px;
+        padding: 10px 15px;
+        margin-top: 10px;
+        transition: all 0.25s ease-in-out;
+      }
+      button:hover {
+        cursor: pointer;
+        transform: scale(1.1);
       }
     </style>
   </head>
   <body>
     <header>
-      <h1>Quora Posts</h1>
-      <a href="/posts/new"><button>Create a new post</button></a>
+      <h1>Quora</h1>
     </header>
     <hr />
     <br />
     <br />
     <div class="nothing">
-      <h3>Nothing Here Proceed to</h3>
+      <h3>Nothing Here, Proceed to</h3>
       <a href="/posts"><button>Posts</button></a>
     </div>
     <br />
